pkp/pkp-lib#5784 Introduce OMP site index

--- a/plugins/themes/default/styles/index.less
+++ b/plugins/themes/default/styles/index.less
@@ -33,6 +33,7 @@
 @import "pages/catalogCategory.less";
 @import "pages/contact.less";
 @import "pages/index.less";
+@import "pages/indexSite.less";
 @import "pages/login.less";
 @import "pages/lostPassword.less";
 @import "pages/register.less";
