--- a/plugins/themes/default/styles/components.less
+++ b/plugins/themes/default/styles/components.less
@@ -159,7 +159,7 @@
 	input[type="email"],
 	input[type="password"],
 	input[type="url"],
-	input[type="phone"],
+	input[type="tel"],
 	select,
 	textarea {
 		padding: 0 0.5em;
@@ -212,7 +212,7 @@
 		input[type="email"],
 		input[type="password"],
 		input[type="url"],
-		input[type="phone"],
+		input[type="tel"],
 		select {
 			max-width: 20em;
 		}
