pkp/pkp-lib#5886 move OMP search from cataloghandler to searchhandler

--- a/plugins/themes/default/styles/index.less
+++ b/plugins/themes/default/styles/index.less
@@ -37,7 +37,7 @@
 @import "pages/login.less";
 @import "pages/lostPassword.less";
 @import "pages/register.less";
-@import "pages/searchResults.less";
+@import "pages/search.less";
 @import "pages/submissions.less";
 @import "pages/viewFile.less";
 @import "objects/announcement_summary.less";
