pkp/pkp-lib#5187 Fixes to address accessibility audit
This commit brings accessibility improvements to OMP based on an
audit and changes of the default theme in OJS. The following
issues were addressed in this commit:

- #5187 Improve color contrast
- #5188 Use ems instead of px in font sizes
- #5189 Improve focus indicators
- #5181 Replace search form in header with link
- #5184 Remove tag-it for reviewer interest entry

--- a/plugins/themes/default/styles/pages/submissions.less
+++ b/plugins/themes/default/styles/pages/submissions.less
@@ -10,7 +10,7 @@
  */
 .page_submissions {
 
-	.submission_checklist {
+	.submission_sections, .submission_checklist {
 
 		ul {
 			margin: @double 0 0;
@@ -37,6 +37,7 @@
 	}
 
 	.submission_checklist {
+
 		li {
 			padding: @double;
 
@@ -51,23 +52,31 @@
 				position: absolute;
 				font-size: @font-lead;
 				color: @yes;
-			}			
+			}
 		}
 	}
 
 	@media(min-width: @screen-phone) {
 
-		.submission_checklist {
+		.submission_sections {
+			li {
+				.fa {
+					top: 22px;
+					left: calc(~"@{double} - 3px");
+				}
+			}
+		}
 
+		.submission_sections, .submission_checklist {
 			ul {
 				border: @bg-border;
 				border-bottom: none;
 			}
 
 			li {
-				padding: @double @double @double (@double * 2);
+				padding: @double @double @double @quadruple;
 				border-bottom: @bg-border;
-				
+
 				.fa {
 					left: @double;
 				}
