--- a/plugins/themes/default/styles/pages/viewFile.less
+++ b/plugins/themes/default/styles/pages/viewFile.less
@@ -12,7 +12,7 @@
 .header_viewable_file {
 	z-index: 2;
 	position: relative;
-	background: @bg-base;
+	background: @primary;
 	line-height: @line-header;
 
 	a {
