--- a/styles/index.less
+++ b/styles/index.less
@@ -76,18 +76,18 @@
         &:not(.category) {
 
             .first_column {
-                padding-left: @double * 2;
+                padding-left: 4rem;
             }
 
             .show_extras,
             .hide_extras {
-                left: @double;
+                left: 2rem;
             }
         }
     }
 
     .row_controls:not(.category_controls) td:first-child {
-        padding-left: @double * 2;
+        padding-left: 4rem;
     }
 
     // Complete checkboxes
