--- a/plugins/themes/default/styles/pages/register.less
+++ b/plugins/themes/default/styles/pages/register.less
@@ -75,7 +75,7 @@
 		color: #fff;
 
 		.pkp_form_error {
-			padding: ((@double - @line-sml) / 2) 0;
+			padding: 0;
 			font-size: @font-sml;
 			font-weight: bold;
 			line-height: @line-sml;
