--- a/plugins/themes/default/styles/sidebar.less
+++ b/plugins/themes/default/styles/sidebar.less
@@ -68,7 +68,7 @@
 		color: @text-light;
 
 		ul {
-			margin-top: @half - 1; // account for border
+			margin-top: calc(~"@{half} - 1px");; // account for border
 			padding-top: @half;
 			font-weight: @normal;
 		}
