pkp/pkp-lib#6978 Add Series navigation to Catalog page

--- a/plugins/themes/default/styles/index.less
+++ b/plugins/themes/default/styles/index.less
@@ -29,6 +29,7 @@
 @import "main.less";
 @import "components/nav-toggle.less";
 @import "pages/catalogCategory.less";
+@import "pages/catalog.less";
 @import "pages/contact.less";
 @import "pages/index.less";
 @import "pages/indexSite.less";
