--- a/plugins/themes/default/styles/pages/catalog.less
+++ b/plugins/themes/default/styles/pages/catalog.less
@@ -16,25 +16,33 @@
 		padding: @double;
 		margin-bottom: -(@triple * 2);
 
-		> h2 {
-			font-size: @font-base;
-			font-weight: @bold;
-			display: inline;
+		h2 {
 			margin: 0;
 		}
 
-		> ul {
-			display: inline;
+		ul {
 			list-style: none;
 			padding: 0px;
-			> li {
-				display: inline;
-			}
 		}
 
 		@media(min-width: @screen-phone) {
 			margin-left: -@double;
 			margin-right: -@double;
+
+			h2 {
+				font-family: @font;
+				font-size: @font-base;
+				font-weight: @bold;
+				display: inline;
+				margin: 0;
+			}
+
+			ul {
+				display: inline;
+				> li {
+					display: inline;
+				}
+			}
 		}
 
 		@media(min-width: @screen-desktop) {
